Fixed modals, upload images and most of styling

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,6 +4,7 @@
 @import "partials/typography";
 @import "partials/breakpoints";
 @import "partials/buttons";
+@import "partials/modal";
 
 //Theme Related
 @import "theme/layout";
