--- a/app/assets/stylesheets/theme/_layout.css.scss
+++ b/app/assets/stylesheets/theme/_layout.css.scss
@@ -1,23 +1,30 @@
 //global settings
 
-body{
-	font-family: $main-font;	
+html, body {
+	font-family: $main-font;
+	font-size: $base-font-size;
+	line-height: $base-line-height;
+	background-color: $main_background_color;	
+	text-transform:capitalize;
 }
 
+
 main{
-	margin: 1rem;
+    @include container;
 }
 
 header{
 	text-align: center;
-	background-color: $header_bgcolor;
+	background-color: $primary_color;
 	color: $header_color;
 	padding: 1rem;	
+	margin-bottom:2rem;
 }
 
 h1{
 	margin: 0px;
-	font-size: 2rem;
+	font-size: 4rem;
+	font-weight: 300;
 }
 
 img {
