--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -5,6 +5,7 @@
 @import "partials/breakpoints";
 @import "partials/buttons";
 @import "partials/modal";
+@import "partials/mixins";
 
 //Theme Related
 @import "theme/layout";
