--- a/app/assets/stylesheets/partials/_base.css.scss
+++ b/app/assets/stylesheets/partials/_base.css.scss
@@ -11,7 +11,8 @@ $bold: 700;
 // Base Font
 $base-font-family: sans-serif;
 $base-font-weight: $regular;
-$base-font-size: 14px;
+$base-font-size: 12px;
+$base-font-size-lg: 14px;
 $base-line-height: 1.2;
 
 // Headings
