--- a/app/assets/stylesheets/partials/_buttons.css.scss
+++ b/app/assets/stylesheets/partials/_buttons.css.scss
@@ -2,12 +2,14 @@
 	background: #ececec;
 	border: 1px solid #cfcfcf;
 	border-radius: 50%;
-	bottom: 50%;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	top: 0;
 	-webkit-box-shadow: 0 0 2px #fff inset;
 	box-shadow: 0 0 2px #fff inset;
 	height: 44px;
-	left: 50%;
-	margin-left: -22px;
+	margin: auto;
 	position: absolute;
 	width: 44px;
 	&:after{
