--- a/app/assets/stylesheets/partials/_typography.css.scss
+++ b/app/assets/stylesheets/partials/_typography.css.scss
@@ -1,5 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,700);
-@import url(http://fonts.googleapis.com/css?family=Lobster);
+@import url(http://fonts.googleapis.com/css?family=Kreon:400,700);
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
 
-$main-font: 'Roboto', sans-serif;
-$decor-font: 'Lobster', cursive;
+$main-font: 'Lato', sans-serif;
+$serif-font: 'Kreon', serif;
