--- a/app/assets/stylesheets/theme/_layout.css.scss
+++ b/app/assets/stylesheets/theme/_layout.css.scss
@@ -4,8 +4,12 @@ html, body {
 	font-family: $main-font;
 	font-size: $base-font-size;
 	line-height: $base-line-height;
-	background-color: $main_background_color;	
+	background-image: asset-data-url("debut_light.png");
+	background-repeat: repeat;	
 	text-transform:capitalize;
+	@include susy-breakpoint($bp-medium, $susy){
+		font-size: $base-font-size-lg;
+	}
 }
 
 
@@ -18,12 +22,17 @@ header{
 	background-color: $primary_color;
 	color: $header_color;
 	padding: 1rem;	
-	margin-bottom:2rem;
+	margin-bottom: 2rem;
+	height: 5rem;
+	width: 100%;
+	@include box-shadow(0 0 9px #9d9d9d);
+	position: fixed;
+	z-index: 9999;
 }
 
 h1{
-	margin: 0px;
-	font-size: 4rem;
+	margin-top: 0rem;
+	font-size: 2.5rem;
 	font-weight: 300;
 }
 
