--- a/app/views/athletes/_new_modal.html.erb
+++ b/app/views/athletes/_new_modal.html.erb
@@ -1,7 +1,7 @@
 <div class="modal-content">
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	<h4 class="modal-title">Edit Athlete</h4>
+	<h4 class="modal-title">Add a New Athlete</h4>
 </div>
 <div class="modal-body">
 	<%= form_for(@athlete) do |f| %>
@@ -27,7 +27,7 @@
 				</div>
 				<div class="form-group">
 					<%= f.label "sport", class:"control-label" %><br>
-					 <%= f.collection_select :sport_id, Sport.order(:name),:id,:name, include_blank: false, class:"form-control" %>
+					 <%= f.collection_select :sport_id, Sport.order(:id),:id,:name, include_blank: false, class:"form-control" %>
 				</div>
 			</div>
 			<div class="col-md-6">
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 		<div class="modal-footer">
-			<%= f.submit "Update", class: "btn btn-primary" %>
+			<%= f.submit "Save", class: "btn btn-primary" %>
 			<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 		</div>		
 		<% end %>
