Added football and changed select field

--- a/app/assets/stylesheets/theme/_index.css.scss
+++ b/app/assets/stylesheets/theme/_index.css.scss
@@ -217,3 +217,7 @@ section {
 	background-image: asset-data-url("baseball.jpg");
 	@extend .background-image;
 }
+.Football{
+	background-image: asset-data-url("football.jpg");
+	@extend .background-image;
+}
