--- a/app/views/athletes/_edit_modal.html.erb
+++ b/app/views/athletes/_edit_modal.html.erb
@@ -28,7 +28,7 @@
 					</div>
 					<div class="form-group">
 						<%= f.label "sport", class:"control-label" %><br>
-						 <%= f.collection_select :sport_id, Sport.order(:id),:id,:name, include_blank: false, class:"form-control" %>
+						<%= f.select :sport, ['Soccer', 'Basketball', 'Tennis', 'Baseball', 'Football'] %>
 					</div>
 				</div>
 				<div class="col-md-6">
