--- a/app/views/athletes/index.html.erb
+++ b/app/views/athletes/index.html.erb
@@ -18,10 +18,7 @@
 						<h2><%= athlete.firstname %>
 							<br>
 								<%= athlete.lastname %></h2>
-						<p><em><% if athlete.sport_id == 1 %>Soccer<%end%>
-										<% if athlete.sport_id == 2 %>Basketball<%end%>
-										<% if athlete.sport_id == 3 %>Tennis<%end%>
-										<% if athlete.sport_id == 4 %>Baseball<%end%>
+						<p><em><%= athlete.sport %>
 							</em> | <%= athlete.league %></p>
 						<p><%= athlete.team %></p>
 					</div>
