--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>My AllStar List</h1>
+			<h1>I <i class="fa fa-heartbeat"></i> Athletes</h1>
 		</header>
 		<main>
 			<%= yield %>
